// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocsTransformer - API writes export entry for React component 1`] = `
Object {
  "exports": Object {
    "App1": Object {
      "description": null,
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:App1/,
      "name": "App1",
      "props": null,
      "type": "component",
      "typeParameters": Array [],
    },
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for interface 1`] = `
Object {
  "exports": Object {
    "Foo": Object {
      "extends": Array [],
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:Foo/,
      "name": "Foo",
      "properties": Object {
        "a": Object {
          "default": null,
          "name": "a",
          "optional": false,
          "type": "property",
          "value": Object {
            "type": "number",
          },
        },
      },
      "type": "interface",
      "typeParameters": Array [],
    },
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for localName React component 1`] = `
Object {
  "exports": Object {
    "AppReal": Object {
      "description": null,
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:App2/,
      "name": "App2",
      "props": null,
      "type": "component",
      "typeParameters": Array [],
    },
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for referenced function 1`] = `
Object {
  "exports": Object {
    "d": Object {},
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for referenced string 1`] = `
Object {
  "exports": Object {
    "c": Object {},
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for static number 1`] = `
Object {
  "exports": Object {
    "a": Object {},
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for static string 1`] = `
Object {
  "exports": Object {
    "b": Object {},
  },
  "links": Object {},
}
`;

exports[`DocsTransformer - API writes export entry for type 1`] = `
Object {
  "exports": Object {
    "Foo": Object {
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:Foo/,
      "type": "link",
    },
  },
  "links": ObjectContaining {
    "/test/src/index.tsx:Foo": ObjectContaining {
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:Foo/,
    },
  },
}
`;

exports[`DocsTransformer - API writes export entry for type union 1`] = `
Object {
  "exports": Object {
    "Foo": Object {
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:Foo/,
      "type": "link",
    },
  },
  "links": ObjectContaining {
    "/test/src/index.tsx:Foo": ObjectContaining {
      "id": StringMatching /\\^\\.\\*\\\\/test\\\\/src\\\\/index\\.tsx:Foo/,
    },
  },
}
`;
